# sheetmates

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  components.json  eslint.config.mjs  firebase.json  firestore.rules  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  storage.rules  vitest.config.ts
.github/workflows/: ci.yml
app/: global-error.tsx  globals.css  robots.ts  sitemap.ts
app/[locale]/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
components/: cookie-consent.tsx  dxf-preview.tsx  dxf-uploader.tsx  error-boundary.tsx  footer.tsx  landing-canvas-static.tsx  landing-canvas-wrapper.tsx  landing-canvas.tsx  landing-cta.tsx  landing-footer-links.tsx  language-switcher.tsx  navbar.tsx  nesting-controls.tsx  price-breakdown.tsx  protected-route.tsx  sheet-viewer.tsx  theme-switcher.tsx
components/admin/: admin-sidebar.tsx  index.ts  inject-sheet-form.tsx  order-list.tsx  production-queue.tsx
components/auction/: index.ts  price-ticker.tsx  viability-meter.tsx
components/canvas/: canvas-error-boundary.tsx  canvas-part.tsx  canvas-toolbar.tsx  grid-layer.tsx  index.ts  nesting-canvas.tsx  parts-layer.tsx  sheet-layer.tsx
components/providers/: auth-provider.tsx  query-provider.tsx
components/ui/: calendar.tsx  command.tsx  kbd.tsx  select.tsx  sidebar.tsx
content/: README.md
docs/: ADMIN_USER_GUIDE.md  STATUS.md
docs/plans/: 2026-02-01-sheetmates-full-roadmap.md  2026-02-02-auto-nesting-design.md  2026-02-02-drop-notifications-design.md  2026-02-02-performance-optimization-plan.md  2026-02-02-platform-enhancements-design.md  2026-02-02-seo-strategy.md  (+1 more)
e2e/: auth.spec.ts  smoke.spec.ts
e2e/fixtures/: test-dxf.ts
functions/: package-lock.json  package.json  tsconfig.json
i18n/: request.ts  routing.ts
messages/: cs.json  en.json  fr.json
wasm/: CMakeLists.txt  Dockerfile  README.md  build.sh
wasm/src/: bindings.cpp
(+112 files in other folders)
